# gear-scale

./: .gitignore  CHANGELOG.md.save0  ClientTypes.hs  README.md  brett-gear-export.csv  brett-gear.csv  gear-scale.cabal  gear-weights.cabal  gear_scale.db  home.html  package.json  stack.yaml
app/: DB.hs  Ids.hs  JSAPI.hs  Main.hs  ServerAPI.hs  ServerHandlers.hs  Types.hs  server.hs
backend/: DB.hs  Ids.hs  ImportExport.hs  ServerAPI.hs  ServerHandlers.hs  server.hs
client_types/: ClientTypes.hs
css/: styles.css
public/: manifest.json
src/: AddGearItemsForm.tsx  App.css  App.tsx  GearItemForm.tsx  GearItemsTable.tsx  TripForm.tsx  backend_api.js  client.d.ts  client.ts  types.ts
static/: api.js  home.js  home.ts  index.html  types.ts
tsdef/: Main.hs  TSDefMain.hs
