cabal-version:      2.4
name:               gear-scale
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brett Wines
maintainer:         brettwines@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable gear-scale
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Server

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , servant
                    , servant-server
                    , js-jquery
                    , servant-js
                    , text
                    , time
                    , aeson
                    , directory
                    , mtl
                    , attoparsec
                    , string-conversions
                    , wai
                    , bytestring
                    , warp
                    , random
    hs-source-dirs:   app
    default-language: Haskell2010
