cabal-version:      2.4
name:               gear-scale
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brett Wines
maintainer:         brettwines@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md


executable tsdef
    main-is: TSDefMain.hs
    default-language: Haskell2010
    hs-source-dirs:   tsdef
                    , app
                    , client_types
    other-modules:    ServerAPI
                    , ClientTypes
                    , DB
                    -- why is DB needed?
    build-depends:    base
                    , servant-js
                    , text
                    , aeson
                    , aeson-typescript
                    , servant
                    , servant-server
                    , beam-core
                    , beam-migrate
                    , beam-sqlite
                    , sqlite-simple


executable gear-scale
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        ClientTypes
        DB
        Ids
        Server
        ServerAPI
        ServerHandlers

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , servant
                    , servant-server
                    , js-jquery
                    , text
                    , time
                    , aeson
                    , directory
                    , mtl
                    , attoparsec
                    , string-conversions
                    , wai
                    , bytestring
                    , warp
                    , random
                    , beam-core
                    , beam-migrate
                    , beam-sqlite
                    , sqlite-simple
    hs-source-dirs:   app
                    , client_types
    default-language: Haskell2010
